# DeepLearningProject

./: .gitignore  README.md  init_leonhard.sh  pyproject.toml  requirements.txt
chrome_gcn/: adjacency_lookup.py  test_data.py
chrome_gcn/data/: 7create_graph_new.py  create_data.py
splice_ai/: README.txt  constants.py  create_datafile.py  create_dataset.py  splice_ai_torch.py  splice_dataset.py  spliceai.py  test_model.py  train_model.py  train_model_torch.py  utils.py
src/graph_splice/: setup.py
src/graph_splice/graph_splice/: config_args.py  data_loader.py  finetune.py  main.py  pretrain.py  runner.py
src/graph_splice/graph_splice/data/: create_torch_data.py
src/graph_splice/graph_splice/models/: ChromeModels.py  WindowModels.py
src/graph_splice/graph_splice/utils/: evals.py  util_methods.py
src/splicing/: setup.py  test_model_torch.py  train_model_torch.py
src/splicing/data_models/: splice_dataset.py
src/splicing/preprocessing/: create_datafile.py  create_dataset.py
src/splicing/splicing/: __init__.py  config.yaml  finetune.py  main.py  pretrain.py  runner.py  test_model.py  tests.ipynb  train_model.py
src/splicing/splicing/data_models/: splice_dataset.py
src/splicing/splicing/models/: geometric_models.py  graph_models.py  losses.py  splice_ai.py
src/splicing/splicing/preprocessing/: create_datafile.py  create_dataset.py  create_dataset_nodup.py  create_graph.py  deprecated_create_dataset.py  gcn_7create_graph_new.py  gcn_create_data.py  gcn_create_torch_data.py  grab_sequence.sh
src/splicing/splicing/utils/: analyze_model.py  analyze_node_representations.py  config_args.py  constants.py  evals.py  general_utils.py  graph_utils.py  metrics.py  spliceai_utils.py  utils.py  visualize.py  wandb_utils.py
src/splicing/utils/: constants.py  utils.py
