[tool.poetry]
name = "dl-project"
version = "0.1.0"
description = "Predicting splicing behaviour based on combined local sequence and long-range 3D genome information."
authors = ["Frederic Boesel <fboesel@ethz.ch>", "Clement Guerner <cguerner@ethz.ch>", "Anej Svete <asvete@ethz.ch>", "Anja Šurina <asurina@ethz.ch>"]

[tool.poetry.dependencies]
python = "~3.9"
keras = "^2.6.0"
numpy = "^1.19"
jupyterlab = "^3.1.18"
pandas = "^1.3.3"
scikit-learn = "^1.0"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
h5py = "~3.1"
tensorflow = "^2.6.0"
pytorch-lightning = "^1.4.9"
tensorflow-gpu = "^2.6.0"
coloredlogs = "^15.0.1"
torchsummary = "^1.5.1"
wandb = "^0.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
