[tool.poetry]
name = "dl-project"
version = "0.1.0"
description = "Predicting splicing behaviour based on combined local sequence and long-range 3D genome information."
authors = ["Frederic Boesel <fboesel@ethz.ch>", "Clement Guerner <cguerner@ethz.ch>", "Anej Svete <asvete@ethz.ch>", "Anja Šurina <asurina@ethz.ch>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.19"
jupyterlab = "^3.1.18"
pandas = "^1.3.3"
scikit-learn = "^1.0"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
h5py = "~3.1"
coloredlogs = "^15.0.1"
torchsummary = "^1.5.1"
wandb = "^0.12.5"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.8.0+cu111 -f https://download.pytorch.org/whl/torch_stable.html"
# force-pytorch-geometric = "pip install torch-scatter -f https://data.pyg.org/whl/torch-1.8.0+cu111.html; pip install torch-sparse -f https://data.pyg.org/whl/torch-1.8.0+cu111.html; pip install torch-geometric"
force-pytorch-geometric = "pip install torch-geometric"